--- a/evals/registry/eval_sets/audio.yaml
+++ b/evals/registry/eval_sets/audio.yaml
@@ -13,14 +13,14 @@ transcript:
 audio-core:
   evals:
     - audio-transcribe
-    - audio-translate-covost-zh-CN_en
-    - audio-translate-covost-ru_en
-    - audio-translate-covost-es_en
+    # - audio-translate-covost-zh-CN_en
+    # - audio-translate-covost-ru_en
+    # - audio-translate-covost-es_en
     - audio-translate-covost-en_ca
     - audio-translate-covost-en_ar
     - audio-translate-covost-en_de
-    - audio-translate-covost-tr_en
-    - audio-translate-covost-sv-SE_en
+    # - audio-translate-covost-tr_en
+    # - audio-translate-covost-sv-SE_en
 
 audio-core-translate: 
   evals:
