move spacy-universal-sentence-encoder to extras

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ repository = "https://github.com/openai/evals"
 
 [project.optional-dependencies]
 formatters = ["black", "isort", "autoflake", "ruff"]
+extras = ["spacy-universal-sentence-encoder"]
 
 torch = ["torch"]
 
