Added audio big bench eval (#39)
* Add bigbench evals

* Remove oaieval-remote file

* Remove oaieval-remote file

* Update

* Clean up

* Add to audio-core

--- a/evals/registry/eval_sets/audio.yaml
+++ b/evals/registry/eval_sets/audio.yaml
@@ -13,6 +13,7 @@ transcript:
 audio-core:
   evals:
     - audio-transcribe
+    - audio-bigbench
     - audio-translate-covost-zh-CN_en
     - audio-translate-covost-ru_en
     - audio-translate-covost-es_en
