Text big bench hard (#40)
* Text big bench

* Update

* Update

* Update

* Update

--- a/evals/registry/evals/audio_tasks.yaml
+++ b/evals/registry/evals/audio_tasks.yaml
@@ -124,9 +124,20 @@ audio-bigbench.validation.v1:
   args:
     dataset: hf://fixie-ai/big_bench_audio?split=train
     eval_completion_fn: gpt-4o
+    max_audio_duration: 65
 
 
 # Text-only versions
+text-bigbench: 
+  id: text-bigbench.validation.v1
+  metrics: [accuracy]
+text-bigbench.validation.v1: 
+  class: evals.elsuite.audio.eval:BigBenchAudio
+  args:
+    dataset: hf://fixie-ai/big_bench_audio?split=train
+    eval_completion_fn: gpt-4o
+    text_only: true
+    max_audio_duration: 65
 
 transcript-transcribe:
   id: transcript-transcribe.test.v1
