Added a audiobench base class

--- a/evals/registry/evals/audio_tasks.yaml
+++ b/evals/registry/evals/audio_tasks.yaml
@@ -130,11 +130,45 @@ audio-bench-cn-college-listen-mcq:
   id: audio-bench-cn-college-listen-mcq.validation.v1
   metrics: [accuracy]
 audio-bench-cn-college-listen-mcq.validation.v1:
-  class: evals.elsuite.audio.eval:AudioBenchCnCollegeListenMcq
+  class: evals.elsuite.audio.eval:AudioBenchTask
   args:
     dataset: hf://fixie-ai/cn_college_listen_mcq_test?split=test
     eval_completion_fn: gpt-4o
     max_audio_duration: 140
+    is_mcq: true
+
+audio-bench-dream-tts-mcq: 
+  id: audio-bench-dream-tts-mcq.validation.v1
+  metrics: [accuracy]
+audio-bench-dream-tts-mcq.validation.v1:
+  class: evals.elsuite.audio.eval:AudioBenchTask
+  args:
+    dataset: hf://fixie-ai/dream_tts_mcq_test?split=test
+    eval_completion_fn: gpt-4o
+    max_audio_duration: 275
+    is_mcq: true
+
+audio-bench-public-sg-speech-qa:
+  id: audio-bench-public-sg-speech-qa.validation.v1
+  metrics: [accuracy]
+audio-bench-public-sg-speech-qa.validation.v1:
+  class: evals.elsuite.audio.eval:AudioBenchTask
+  args:
+    dataset: hf://fixie-ai/public_sg_speech_qa_test?split=test
+    eval_completion_fn: gpt-4o
+    max_audio_duration: 100
+    is_mcq: false 
+
+audio-slue-p2-sqa5: 
+  id: audio-slue-p2-sqa5.validation.v1
+  metrics: [accuracy]
+audio-slue-p2-sqa5.validation.v1:
+  class: evals.elsuite.audio.eval:AudioBenchTask
+  args:
+    dataset: hf://fixie-ai/slue_p2_sqa5_test?split=test
+    eval_completion_fn: gpt-4o
+    max_audio_duration: 50
+    is_mcq: false 
 
 # Text-only versions
 text-bigbench: 
