--- a/evals/registry/eval_sets/audio.yaml
+++ b/evals/registry/eval_sets/audio.yaml
@@ -14,6 +14,9 @@ audio-core:
   evals:
     - audio-transcribe
     - audio-bigbench
+    - audio-ser
+    - audio-boolq
+    - audio-sqa-web-questions
     - audio-translate-covost-zh-CN_en
     - audio-translate-covost-ru_en
     - audio-translate-covost-es_en
@@ -61,9 +64,7 @@ transcript-translate:
 
 audio-sqa:
   evals:
-    - audio-boolq
-    - audio-ser
-    - audio-sqa-*.validation.v1
+    - audio-sqa-web-questions
 
 transcript-sqa:
   evals:
