--- a/evals/registry/eval_sets/audio.yaml
+++ b/evals/registry/eval_sets/audio.yaml
@@ -17,6 +17,7 @@ audio-core:
     - audio-ser
     - audio-boolq
     - audio-sqa-web-questions
+    - audio-sqa-llama-questions
     - audio-translate-covost-zh-CN_en
     - audio-translate-covost-ru_en
     - audio-translate-covost-es_en
