--- a/evals/registry/evals/audio_tasks.yaml
+++ b/evals/registry/evals/audio_tasks.yaml
@@ -124,7 +124,7 @@ audio-bigbench.validation.v1:
   args:
     dataset: hf://fixie-ai/big_bench_audio?split=train
     eval_completion_fn: gpt-4o
-    max_audio_duration: 65
+    # max_audio_duration: 65
 
 audio-bench-cn-college-listen-mcq:
   id: audio-bench-cn-college-listen-mcq.validation.v1
@@ -133,7 +133,7 @@ audio-bench-cn-college-listen-mcq.validation.v1:
   class: evals.elsuite.audio.eval:AudioBenchTask
   args:
     dataset: hf://fixie-ai/cn_college_listen_mcq_test?split=test
-    eval_completion_fn: gpt-4o
+    eval_completion_fn: accounts/fireworks/models/llama-v3-70b-instruct
     max_audio_duration: 140
     is_mcq: true
 
@@ -144,7 +144,7 @@ audio-bench-dream-tts-mcq.validation.v1:
   class: evals.elsuite.audio.eval:AudioBenchTask
   args:
     dataset: hf://fixie-ai/dream_tts_mcq_test?split=test
-    eval_completion_fn: gpt-4o
+    eval_completion_fn: accounts/fireworks/models/llama-v3-70b-instruct
     max_audio_duration: 275
     is_mcq: true
 
@@ -155,7 +155,7 @@ audio-bench-public-sg-speech-qa.validation.v1:
   class: evals.elsuite.audio.eval:AudioBenchTask
   args:
     dataset: hf://fixie-ai/public_sg_speech_qa_test?split=test
-    eval_completion_fn: gpt-4o
+    eval_completion_fn: accounts/fireworks/models/llama-v3-70b-instruct
     max_audio_duration: 100
     is_mcq: false 
 
@@ -166,7 +166,7 @@ audio-slue-p2-sqa5.validation.v1:
   class: evals.elsuite.audio.eval:AudioBenchTask
   args:
     dataset: hf://fixie-ai/slue_p2_sqa5_test?split=test
-    eval_completion_fn: gpt-4o
+    eval_completion_fn: accounts/fireworks/models/llama-v3-70b-instruct
     max_audio_duration: 50
     is_mcq: false 
 
