Let max_audio_duration be -1

--- a/evals/registry/evals/audio_tasks.yaml
+++ b/evals/registry/evals/audio_tasks.yaml
@@ -124,7 +124,7 @@ audio-bigbench.validation.v1:
   args:
     dataset: hf://fixie-ai/big_bench_audio?split=train
     eval_completion_fn: gpt-4o
-    # max_audio_duration: 65
+    max_audio_duration: -1
 
 audio-bench-cn-college-listen-mcq:
   id: audio-bench-cn-college-listen-mcq.validation.v1
@@ -133,8 +133,8 @@ audio-bench-cn-college-listen-mcq.validation.v1:
   class: evals.elsuite.audio.eval:AudioBenchTask
   args:
     dataset: hf://fixie-ai/cn_college_listen_mcq_test?split=test
-    eval_completion_fn: accounts/fireworks/models/llama-v3-70b-instruct
-    max_audio_duration: 140
+    eval_completion_fn: gpt-4o
+    max_audio_duration: -1
     is_mcq: true
 
 audio-bench-dream-tts-mcq: 
@@ -144,8 +144,8 @@ audio-bench-dream-tts-mcq.validation.v1:
   class: evals.elsuite.audio.eval:AudioBenchTask
   args:
     dataset: hf://fixie-ai/dream_tts_mcq_test?split=test
-    eval_completion_fn: accounts/fireworks/models/llama-v3-70b-instruct
-    max_audio_duration: 275
+    eval_completion_fn: gpt-4o
+    max_audio_duration: -1
     is_mcq: true
 
 audio-bench-public-sg-speech-qa:
@@ -155,8 +155,8 @@ audio-bench-public-sg-speech-qa.validation.v1:
   class: evals.elsuite.audio.eval:AudioBenchTask
   args:
     dataset: hf://fixie-ai/public_sg_speech_qa_test?split=test
-    eval_completion_fn: accounts/fireworks/models/llama-v3-70b-instruct
-    max_audio_duration: 100
+    eval_completion_fn: gpt-4o
+    max_audio_duration: -1
     is_mcq: false 
 
 audio-slue-p2-sqa5: 
@@ -166,8 +166,8 @@ audio-slue-p2-sqa5.validation.v1:
   class: evals.elsuite.audio.eval:AudioBenchTask
   args:
     dataset: hf://fixie-ai/slue_p2_sqa5_test?split=test
-    eval_completion_fn: accounts/fireworks/models/llama-v3-70b-instruct
-    max_audio_duration: 50
+    eval_completion_fn: gpt-4o
+    max_audio_duration: -1
     is_mcq: false 
 
 # Text-only versions
