--- a/evals/registry/solvers/whisper.yaml
+++ b/evals/registry/solvers/whisper.yaml
@@ -3,7 +3,18 @@
 # text transcript to the downstream solver. The Whisper solver can be used with
 # any solver that accepts text input.
 
-
+generation/whisper/fireworks-llama-33-70b-instruct: 
+  class: evals.solvers.providers.openai.whisper_solver:WhisperCascadedSolver
+  args:
+    solver:
+      class: evals.solvers.providers.fireworks.fireworks_solver:FireworksSolver
+      args:
+        completion_fn_options:
+          model: accounts/fixie/deployedModels/llama-v3p3-70b-instruct-6b17fcd9
+          extra_options:
+            temperature: 0
+            max_tokens: 512
+            
 generation/whisper/fireworks-llama-31-70b-instruct: 
   class: evals.solvers.providers.openai.whisper_solver:WhisperCascadedSolver
   args:
@@ -28,6 +39,7 @@ generation/whisper/fireworks-llama-31-8b-instruct:
           extra_options:
             temperature: 0
             max_tokens: 512
+
 
 generation/whisper/groq-llama-31-8b:
   class: evals.solvers.providers.openai.whisper_solver:WhisperCascadedSolver
