--- a/evals/registry/eval_sets/audio.yaml
+++ b/evals/registry/eval_sets/audio.yaml
@@ -29,16 +29,16 @@ audio-core:
 
 audio-core-translate: 
   evals:
-    - audio-translate-covost-en_de
-    - audio-translate-covost-en_ca
-    - audio-translate-covost-en_ar
-    - audio-translate-covost-en_tr
-    - audio-translate-covost-en_sv-SE
-    - audio-translate-covost-ru_en
-    - audio-translate-covost-es_en 
-    - audio-translate-covost-zh-CN_en
-    - audio-translate-covost-sv-SE_en
-    - audio-translate-covost-tr_en
+    - transcript-transcribe
+    - text-bigbench
+    - transcript-translate-covost-zh-CN_en
+    - transcript-translate-covost-ru_en
+    - transcript-translate-covost-es_en
+    - transcript-translate-covost-en_ca
+    - transcript-translate-covost-en_ar
+    - transcript-translate-covost-en_de
+    - transcript-translate-covost-tr_en
+    - transcript-translate-covost-sv-SE_en
 
 transcript-core:
   evals:
