--- a/evals/registry/eval_sets/audio.yaml
+++ b/evals/registry/eval_sets/audio.yaml
@@ -51,6 +51,7 @@ transcript-core:
     - transcript-translate-covost-en_ar
     - transcript-translate-covost-en_de
     - transcript-translate-covost-tr_en
+    - transcript-translate-covost-sv-SE_en
 
 audio-translate:
   evals:
