--- a/evals/registry/solvers/whisper.yaml
+++ b/evals/registry/solvers/whisper.yaml
@@ -3,6 +3,68 @@
 # text transcript to the downstream solver. The Whisper solver can be used with
 # any solver that accepts text input.
 
+generation/whisper/fireworks-llama-33-70b-instruct: 
+  class: evals.solvers.providers.openai.whisper_solver:WhisperCascadedSolver
+  args:
+    solver:
+      class: evals.solvers.providers.fireworks.fireworks_solver:FireworksSolver
+      args:
+        completion_fn_options:
+          model: accounts/fixie/deployedModels/llama-v3p3-70b-instruct-6b17fcd9
+          extra_options:
+            temperature: 0
+            max_tokens: 512
+            
+generation/whisper/fireworks-llama-31-70b-instruct: 
+  class: evals.solvers.providers.openai.whisper_solver:WhisperCascadedSolver
+  args:
+    solver:
+      class: evals.solvers.providers.fireworks.fireworks_solver:FireworksSolver
+      args:
+        completion_fn_options:
+          # model: accounts/fireworks/models/llama-v3p1-70b-instruct
+          model: accounts/fireworks/models/llama-v3p1-70b-instruct#accounts/fixie/deployments/d2630f9a
+          extra_options:
+            temperature: 0
+            max_tokens: 512
+
+generation/whisper/fireworks-llama-31-8b-instruct:
+  class: evals.solvers.providers.openai.whisper_solver:WhisperCascadedSolver
+  args:
+    solver:
+      class: evals.solvers.providers.fireworks.fireworks_solver:FireworksSolver
+      args:
+        completion_fn_options:
+          model: accounts/fireworks/models/llama-v3p1-8b-instruct#accounts/fixie/deployments/682dbb7b
+          extra_options:
+            temperature: 0
+            max_tokens: 512
+
+
+generation/whisper/groq-llama-31-8b:
+  class: evals.solvers.providers.openai.whisper_solver:WhisperCascadedSolver
+  args:
+    solver: 
+      class: evals.solvers.providers.groq.groq_solver:GroqSolver
+      args:
+        completion_fn_options:
+          model: llama-3.1-8b-instant
+      extra_options:
+        temperature: 0
+        max_tokens: 512
+
+generation/whisper/groq-llama-31-70b:
+  class: evals.solvers.providers.openai.whisper_solver:WhisperCascadedSolver
+  args:
+    solver: 
+      class: evals.solvers.providers.groq.groq_solver:GroqSolver
+      args:
+        completion_fn_options:
+          model: llama-3.1-70b-versatile
+          extra_options:
+            temperature: 0
+            max_tokens: 512
+
 generation/whisper/gpt-4-turbo:
   class: evals.solvers.providers.openai.whisper_solver:WhisperCascadedSolver
   args:
