Fix audio-bench-slue-p2-sqa5 naming

--- a/evals/registry/eval_sets/audio.yaml
+++ b/evals/registry/eval_sets/audio.yaml
@@ -17,7 +17,7 @@ audio-core:
     - audio-bench-cn-college-listen-mcq
     - audio-bench-dream-tts-mcq
     - audio-bench-public-sg-speech-qa
-    - audio-slue-p2-sqa5
+    - audio-bench-slue-p2-sqa5
     - audio-translate-covost-zh-CN_en
     - audio-translate-covost-ru_en
     - audio-translate-covost-es_en
