--- a/evals/registry/evals/audio_tasks.yaml
+++ b/evals/registry/evals/audio_tasks.yaml
@@ -159,10 +159,10 @@ audio-bench-public-sg-speech-qa.validation.v1:
     max_audio_duration: -1
     is_mcq: false 
 
-audio-slue-p2-sqa5: 
-  id: audio-slue-p2-sqa5.validation.v1
+audio-bench-slue-p2-sqa5: 
+  id: audio-bench-slue-p2-sqa5.validation.v1
   metrics: [accuracy]
-audio-slue-p2-sqa5.validation.v1:
+audio-bench-slue-p2-sqa5.validation.v1:
   class: evals.elsuite.audio.eval:AudioBenchTask
   args:
     dataset: hf://fixie-ai/slue_p2_sqa5_test?split=test
