Fix audio-bench-slue-p2-sqa5 naming (#46)
* Fix audio-bench-slue-p2-sqa5 naming

* Update

--- a/evals/registry/eval_sets/audio.yaml
+++ b/evals/registry/eval_sets/audio.yaml
@@ -14,10 +14,10 @@ audio-core:
   evals:
     - audio-transcribe
     - audio-bigbench
-    - audio-bench-cn-college-listen-mcq
-    - audio-bench-dream-tts-mcq
-    - audio-bench-public-sg-speech-qa
-    - audio-slue-p2-sqa5
+    - audiobench-cn-college-listen-mcq
+    - audiobench-dream-tts-mcq
+    - audiobench-public-sg-speech-qa
+    - audiobench-slue-p2-sqa5
     - audio-translate-covost-zh-CN_en
     - audio-translate-covost-ru_en
     - audio-translate-covost-es_en
@@ -67,10 +67,10 @@ audio-sqa:
   evals:
     - audio-sqa-web-questions
     - audio-bigbench
-    - audio-bench-cn-college-listen-mcq
-    - audio-bench-dream-tts-mcq
-    - audio-bench-public-sg-speech-qa
-    - audio-slue-p2-sqa5
+    - audiobench-cn-college-listen-mcq
+    - audiobench-dream-tts-mcq
+    - audiobench-public-sg-speech-qa
+    - audiobench-slue-p2-sqa5
 
 transcript-sqa:
   evals:
