--- a/evals/registry/eval_sets/audio.yaml
+++ b/evals/registry/eval_sets/audio.yaml
@@ -65,12 +65,12 @@ transcript-translate:
 
 audio-sqa:
   evals:
-    - audio-sqa-web-questions
+    # - audio-sqa-web-questions
     - audio-bigbench
-    - audiobench-cn-college-listen-mcq
-    - audiobench-dream-tts-mcq
-    - audiobench-public-sg-speech-qa
-    - audiobench-slue-p2-sqa5
+    # - audiobench-cn-college-listen-mcq
+    # - audiobench-dream-tts-mcq
+    # - audiobench-public-sg-speech-qa
+    # - audiobench-slue-p2-sqa5
 
 transcript-sqa:
   evals:
