--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,3 +73,18 @@ packages = ["evals"]
 # Allow lines to be as long as 767 characters, this is currently the longest line
 # TODO: This should be brought down in the future
 line-length = 767
+
+[tool.poetry]
+name = "evals"
+version = "0.1.0"
+description = ""
+authors = ["Keegan Quigley <keeganwquigley@gmail.com>"]
+readme = "README.md"
+
+[tool.poetry.dependencies]
+python = "^3.11"
+
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
