more deepgram options

--- a/evals/registry/solvers/deepgram.yaml
+++ b/evals/registry/solvers/deepgram.yaml
@@ -1,2 +1,9 @@
-generation/deepgram:
+generation/deepgram/nova-3:
   class: evals.solvers.providers.deepgram.deepgram_solver:DeepgramSolver
+  args:
+    model_name: nova-3
+
+generation/deepgram/nova-2:
+  class: evals.solvers.providers.deepgram.deepgram_solver:DeepgramSolver
+  args:
+    model_name: nova-2
