--- a/evals/registry/evals/audio_transcription_tasks.yaml
+++ b/evals/registry/evals/audio_transcription_tasks.yaml
@@ -1,7 +1,6 @@
 librispeech-clean-transcription:
   id: librispeech-clean-transcription.test.v1
   metrics: [accuracy]
-
 librispeech-clean-transcription.test.v1:
   class: evals.elsuite.audio.eval:Transcribe
   args:
@@ -10,7 +9,6 @@ librispeech-clean-transcription.test.v1:
 librispeech-other-transcription:
   id: librispeech-other-transcription.test.v1
   metrics: [accuracy]
-
 librispeech-other-transcription.test.v1:
   class: evals.elsuite.audio.eval:Transcribe
   args:
@@ -19,7 +17,6 @@ librispeech-other-transcription.test.v1:
 fleurs-en-transcription:
   id: fleurs-en-transcription.test.v1
   metrics: [accuracy]
-
 fleurs-en-transcription.test.v1:
   class: evals.elsuite.audio.eval:Transcribe
   args:
@@ -29,7 +26,6 @@ fleurs-en-transcription.test.v1:
 fleurs-hi-transcription:
   id: fleurs-hi-transcription.test.v1
   metrics: [accuracy]
-
 fleurs-hi-transcription.test.v1:
   class: evals.elsuite.audio.eval:Transcribe
   args:
@@ -39,7 +35,6 @@ fleurs-hi-transcription.test.v1:
 commonvoice-en-transcription:
   id: commonvoice-en-transcription.test.v1
   metrics: [accuracy]
-
 commonvoice-en-transcription.test.v1:
   class: evals.elsuite.audio.eval:Transcribe
   args:
@@ -49,7 +44,6 @@ commonvoice-en-transcription.test.v1:
 commonvoice-hi-transcription:
   id: commonvoice-hi-transcription.test.v1
   metrics: [accuracy]
-
 commonvoice-hi-transcription.test.v1:
   class: evals.elsuite.audio.eval:Transcribe
   args:
@@ -59,7 +53,6 @@ commonvoice-hi-transcription.test.v1:
 ami-ihm-transcription:
   id: ami-ihm-transcription.test.v1
   metrics: [accuracy]
-
 ami-ihm-transcription.test.v1:
   class: evals.elsuite.audio.eval:Transcribe
   args:
@@ -68,17 +61,16 @@ ami-ihm-transcription.test.v1:
 ami-ihm-transcription-short:
   id: ami-ihm-transcription-short.test.v1
   metrics: [accuracy]
-
 ami-ihm-transcription-short.test.v1:
   class: evals.elsuite.audio.eval:Transcribe
   args:
     dataset: hf://edinburghcstr/ami?name=ihm&split=test
     max_audio_duration: 3.0
 
+# Ultravox-calls
 ultravox-calls-telephony-transcription:
   id: ultravox-calls-telephony-transcription.test.v1
   metrics: [accuracy]
-
 ultravox-calls-telephony-transcription.test.v1:
   class: evals.elsuite.audio.eval:Transcribe
   args:
@@ -88,18 +80,15 @@ ultravox-calls-telephony-transcription.test.v1:
 ultravox-calls-telephony-prekrisp-transcription:
   id: ultravox-calls-telephony-prekrisp-transcription.test.v1
   metrics: [accuracy]
-
 ultravox-calls-telephony-prekrisp-transcription.test.v1:
   class: evals.elsuite.audio.eval:Transcribe
   args:
     dataset: hf://fixie-ai/ultravox-calls?name=en-telephony-prekrisp&split=test
     text_field: clean_transcription
 
-
 ultravox-calls-transcription:
   id: ultravox-calls-transcription.test.v1
   metrics: [accuracy]
-
 ultravox-calls-transcription.test.v1:
   class: evals.elsuite.audio.eval:Transcribe
   args:
@@ -109,9 +98,53 @@ ultravox-calls-transcription.test.v1:
 ultravox-calls-prekrisp-transcription:
   id: ultravox-calls-prekrisp-transcription.test.v1
   metrics: [accuracy]
-
 ultravox-calls-prekrisp-transcription.test.v1:
   class: evals.elsuite.audio.eval:Transcribe
   args:
     dataset: hf://fixie-ai/ultravox-calls?name=en-prekrisp&split=test
     text_field: clean_transcription
+
+# Ultravox-calls with cutoff
+# Cutoff is a method to measure the accuracy of the model when the length of the 
+# transcription is limited to twice the length of the reference transcription.
+
+# This is a temporary method to measure the accuracy of the model excluding hallucinations
+ultravox-calls-telephony-transcription-cutoff:
+  id: ultravox-calls-telephony-transcription-cutoff.test.v1
+  metrics: [accuracy]
+ultravox-calls-telephony-transcription-cutoff.test.v1:
+  class: evals.elsuite.audio.eval:Transcribe
+  args:
+    dataset: hf://fixie-ai/ultravox-calls?name=en-telephony&split=test
+    text_field: clean_transcription
+    cut_off_transcription: True
+
+ultravox-calls-telephony-prekrisp-transcription-cutoff:
+  id: ultravox-calls-telephony-prekrisp-transcription-cutoff.test.v1
+  metrics: [accuracy]
+ultravox-calls-telephony-prekrisp-transcription-cutoff.test.v1:
+  class: evals.elsuite.audio.eval:Transcribe
+  args:
+    dataset: hf://fixie-ai/ultravox-calls?name=en-telephony-prekrisp&split=test
+    text_field: clean_transcription
+    cut_off_transcription: True
+
+ultravox-calls-transcription-cutoff:
+  id: ultravox-calls-transcription-cutoff.test.v1
+  metrics: [accuracy]
+ultravox-calls-transcription-cutoff.test.v1:
+  class: evals.elsuite.audio.eval:Transcribe
+  args:
+    dataset: hf://fixie-ai/ultravox-calls?name=en&split=test
+    text_field: clean_transcription
+    cut_off_transcription: True
+
+ultravox-calls-prekrisp-transcription-cutoff:
+  id: ultravox-calls-prekrisp-transcription-cutoff.test.v1
+  metrics: [accuracy]
+ultravox-calls-prekrisp-transcription-cutoff.test.v1:
+  class: evals.elsuite.audio.eval:Transcribe
+  args:
+    dataset: hf://fixie-ai/ultravox-calls?name=en-prekrisp&split=test
+    text_field: clean_transcription
+    cut_off_transcription: True
