--- a/evals/registry/evals/audio_transcription_tasks.yaml
+++ b/evals/registry/evals/audio_transcription_tasks.yaml
@@ -57,6 +57,7 @@ ami-ihm-transcription.test.v1:
   class: evals.elsuite.audio.eval:Transcribe
   args:
     dataset: hf://edinburghcstr/ami?name=ihm&split=test
+    min_audio_duration: 0.5
 
 ami-ihm-transcription-short:
   id: ami-ihm-transcription-short.test.v1
@@ -66,6 +67,7 @@ ami-ihm-transcription-short.test.v1:
   args:
     dataset: hf://edinburghcstr/ami?name=ihm&split=test
     max_audio_duration: 3.0
+    min_audio_duration: 0.5
 
 # Ultravox-calls
 ultravox-calls-telephony-transcription:
